force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</description>
    <inlineHelpText>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</inlineHelpText>
    <label>Contact SCC Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Synchronised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>