force-app/main/default/objects/Contact/fields/Customer_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Flagged__c</fullName>
    <formula>IF(Abuse__c , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EgoGw&amp;operationContext=CHATTER&amp;contentId=05T1U00001W71qr&quot;, &apos;warning&apos;, 24, 24), &apos;&apos;) &amp; 

IF(Special_Attention__c, IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EgoH1&amp;operationContext=CHATTER&amp;contentId=05T1U00001W71qw&quot;, &apos;warning&apos;, 24, 24), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Flagged</label>
    <type>Text</type>
</CustomField>