force-app/main/default/objects/Contact/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>Simple formula required to display the language preference on the Case record.</description>
    <formula>Text(Account.Language_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Preference</label>
    <type>Text</type>
</CustomField>