force-app/main/default/objects/Contact/fields/SFCC_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Customer_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Customer ID.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Customer ID.</inlineHelpText>
    <label>SFCC Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>