force-app/main/default/objects/Contact/fields/SFCC_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Customer_Number__c</fullName>
    <description>This field holds Salesforce Commerce Cloud customer number.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud customer number.</inlineHelpText>
    <label>SFCC Customer Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>